fix unit layout on mobile

--- a/src/app/components/facility/facility.component.scss
+++ b/src/app/components/facility/facility.component.scss
@@ -75,7 +75,7 @@
 
   position: absolute;
   width: var(--preview-size);
-  aspect-ratio: 1/1;
+  height: var(--preview-size);
   border-radius: 50%;
   top: calc(var(--y, 0) * 1%);
   left: calc(var(--x, 0) * 1%);
